my_ws/log/build_2023-05-25_22-16-51/my_py_pkg/stderr.log
  File "/home/prajesh/my_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/my_first_node.py", line 4
    class my_node(Node)
                       ^
SyntaxError: expected ':'

